@@ -8,14 +8,20 @@ GeneralPreferencesPanel.execlogfileNew=Execution Log File: {0}
 GeneralPreferencesPanel.general=General
 GeneralPreferencesPanel.logging=Logging
 GeneralPreferencesPanel.maxonopen=Maximize Session Sheet on Open
+GeneralPreferencesPanel.paths=SQuirreL paths
+GeneralPreferencesPanel.savePreferencesImmediately=Save Preferences Immediately
+GeneralPreferencesPanel.selectOnRightMouseClick=Select On Right Mouse Click
 GeneralPreferencesPanel.showaliasestoolbar=Show Aliases Toolbar
 GeneralPreferencesPanel.showcoloricons=Show Color Icons In Toolbars
 GeneralPreferencesPanel.showdriverstoolbar=Show Drivers Toolbar
 GeneralPreferencesPanel.showmainwinstatusbar=Show Main Window Status Bar
 GeneralPreferencesPanel.showmainwintoolbar=Show Main Window Toolbar
 GeneralPreferencesPanel.showpluginfiles=Show Plugin files being loaded in Splash Screen
+GeneralPreferencesPanel.showSessionStartupTimeHint=Show Session startup time hint
 GeneralPreferencesPanel.showtooltips=Show Tooltips
 GeneralPreferencesPanel.showwindowcontents=Show Window Contents While Dragging
+GeneralPreferencesPanel.squirrelHomePath=Home directory: -home {0}
+GeneralPreferencesPanel.squirrelUserPath=User directory: -userdir {0}
 GeneralPreferencesPanel.tabtitle=General
 GeneralPreferencesPanel.tabhint=General
 GeneralPreferencesPanel.unspecified=<unspecified>
@@ -23,11 +29,8 @@ GeneralPreferencesPanel.usescrolltabs=Use Scrollable Tabbed Panes
 GeneralPreferencesPanel.warnJreJdbcMismatch=Warning for JRE/JDBC Version Mismatch
 GeneralPreferencesPanel.warnForUnsavedFileEdits=Warning for unsaved file edits
 GeneralPreferencesPanel.warnForUnsavedBufferEdits=Warning for unsaved buffer edits
-GeneralPreferencesPanel.showSessionStartupTimeHint=Show Session startup time hint
-GeneralPreferencesPanel.savePreferencesImmediately=Save Preferences Immediately
-GeneralPreferencesPanel.paths=SQuirreL paths
-GeneralPreferencesPanel.squirrelHomePath=Home directory: -home {0}
-GeneralPreferencesPanel.squirrelUserPath=User directory: -userdir {0}
+
+
 
 
 GlobalPreferencesSheet.close=Close
